# sudokusolver

./: README.md  pyproject.toml  pytest.ini  solver.py  solver_tests.py
